fixed hamburger menu overlapping search button with media query at 480px

--- a/client/components/Navigation/navigation.module.css
+++ b/client/components/Navigation/navigation.module.css
@@ -63,7 +63,7 @@
   max-height: 80px;
 }
 
-@media only screen and (max-width: 765px) {
+@media only screen and (max-width: 768px) {
   .navMenu {
     display: none;
   }
