--- a/client/global.css
+++ b/client/global.css
@@ -38,7 +38,7 @@ a {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 765px) {
+@media only screen and (max-width: 768px) {
   body {
     background-image: linear-gradient(
       to top 109.6deg,
